--- a/the-web-dev-bootcamp/bootstrap/bootstrap-3-basics.html
+++ b/the-web-dev-bootcamp/bootstrap/bootstrap-3-basics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery</title>
+    <title>Bootstrap Basics</title>
 
     <!-- include Bootstrap 3 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
