--- a/the-web-dev-bootcamp/bootstrap/grid-system-3.html
+++ b/the-web-dev-bootcamp/bootstrap/grid-system-3.html
@@ -25,7 +25,9 @@
             font-size: 1.8rem;
         }
         /* Olaf's content */
-        .row > .col-lg-3 {
+        /* change from col-lg-3 to col-md-3 */
+        /* b/c lg-3 is redundant if md-3 */
+        .row > .col-md-3 {
             background: antiquewhite;
             border: 1px solid purple;
             padding: 10px;
@@ -39,16 +41,19 @@
 
     <!-- using the grid system -->
     <div class="container">
+        <br />
 
         <h2>recreating structure from <a href="https://olafurarnalds.com/">olafurarnalds.com</a></h2>
         <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-6">TOUR DATE!</div>
-            <div class="col-lg-3 col-md-3 col-sm-6">TOUR DATE!</div>
-            <div class="col-lg-3 col-md-3 col-sm-6">TOUR DATE!</div>
-            <div class="col-lg-3 col-md-3 col-sm-6">TOUR DATE!</div>
+            <!-- COL-MD-3 means that all larger breakpoints are the same -->
+            <!-- eg: col-md-3 == col-lg-3 (all larger than md) -->
+            <div class="col-md-3 col-sm-6">TOUR DATE!</div>
+            <div class="col-md-3 col-sm-6">TOUR DATE!</div>
+            <div class="col-md-3 col-sm-6">TOUR DATE!</div>
+            <div class="col-md-3 col-sm-6">TOUR DATE!</div>
         </div>
 
-        <br />
+        <br /><hr /><br />
         <!-- need a row to divide -->
         <div class="row">
             <div class="col-lg-2 pink">col lg 2</div>
@@ -56,9 +61,9 @@
             <div class="col-lg-2 pink">col lg 2</div>
         </div>
 
-        <br />
+        <br /><hr />
+
         <h2>12 units going across</h2>
-        
         <div class="row">
             <div class="col-lg-1 col-md-2 pink">col lg 1 ; col md 2</div>
             <div class="col-lg-1 col-md-2 pink">col lg 1 ; col md 2</div>
