--- a/the-web-dev-bootcamp/bootstrap-4/colors/index.html
+++ b/the-web-dev-bootcamp/bootstrap-4/colors/index.html
@@ -16,20 +16,10 @@
 <body>
     <div class="container">
 
-        <h2>colors</h2>
-        <p class="text-primary">.text-primary</p>
-        <p class="text-secondary">.text-secondary</p>
-        <p class="text-success">.text-success</p>
-        <p class="text-danger">.text-danger</p>
-        <p class="text-warning">.text-warning</p>
-        <p class="text-info">.text-info</p>
-        <p class="text-light bg-dark">.text-light</p>
-        <p class="text-dark">.text-dark</p>
-        <p class="text-body">.text-body</p>
-        <p class="text-muted">.text-muted</p>
-        <p class="text-white bg-dark">.text-white</p>
-        <p class="text-black-50">.text-black-50</p>
-        <p class="text-white-50 bg-dark">.text-white-50</p>
+        <h1 class="text-primary">i am an h1</h1>
+        <h1 class="text-primary">i am an h1</h1>
+        <h3 class="bg-light">.text-white (light white background)</h3>
+
         <hr />
 
     </div>
