--- a/the-web-dev-bootcamp/bootstrap-4/typography/index.html
+++ b/the-web-dev-bootcamp/bootstrap-4/typography/index.html
@@ -24,11 +24,34 @@
 <body>
     <div class="container">
 
-        <h1 class="text-primary">i am an h1</h1>
-        <h1 class="text-primary">i am an h1</h1>
-        <h3 class="bg-light">.text-white (light white background)</h3>
+        <h1 class="text-primary">typography</h1>
+
+        <h1 class="text-primary">headings</h1>
 
         <hr />
+
+        <h1 class="display-1">display 1</h1>
+        <h1 class="display-2">display 2</h1>
+        <h1 class="display-3">display 3</h1>
+        <h1 class="display-4">display 4</h1>
+
+        <hr />
+
+        <blockquote class="blockquote">
+            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium error quia quos optio earum consequuntur adipisci, maxime, expedita nisi consectetur quas veritatis debitis at dolor accusamus eveniet perspiciatis velit corporis.</p>
+            <footer class="blockquote-footer">Written by my cat <cite title="Blue Steele">Blue Steele</cite></footer>
+        </blockquote>
+
+        <hr />
+
+        <h4>right aligned</h4>
+
+        <blockquote class="blockquote text-right">
+            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium error quia quos optio earum consequuntur adipisci, maxime, expedita nisi consectetur quas veritatis debitis at dolor accusamus eveniet perspiciatis velit corporis.</p>
+            <footer class="blockquote-footer">Written by my cat <cite title="Blue Steele">Blue Steele</cite></footer>
+        </blockquote>
+
+        <br /><br /><br />
 
     </div>
 
