Jumbotron & custom danger btn

--- a/notion/index.html
+++ b/notion/index.html
@@ -72,9 +72,40 @@
                         <a class="nav-link" href="#">Sign up</a>
                     </li>
                 </ul>
-        
+
             </div>
         </nav>
+        <!-- END NAVBAR -->
+
+        <!-- start jumbotron -->
+
+        <div class="row jumbotron bg-">
+
+            <div class="col-md-4 offset-md-2">
+                <h1 class="jumbotron-header">All-in-one workspace</h1>
+            </div>
+            <!-- <div class="col-md-4">left</div> -->
+            <div class="col-md-4 mt-3">
+                <p class="text">
+                    Write, plan, collaborate, and get organized.
+                </p>
+                <p class="text">
+                    Notion is all you need &mdash; in one tool.
+                </p>
+                <!-- input & button section -->
+                <div class="form-inline">
+                    <input type="text" class="form-control mr-2" placeholder="Enter your email..." />
+                    <button class="btn btn-danger">Get started</button>
+                    <p class="text lead mt-2">
+                        For teams & individuals &mdash; web, mobile, Mac, Windows.
+                    </p>
+
+                </div>
+
+            </div>
+
+        </div>
+        <!-- END JUMBOTRON -->
 
         <hr />
 
