Add todos & badge in navbar

--- a/notion/index.html
+++ b/notion/index.html
@@ -17,7 +17,7 @@
     <div class="container">
 
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light mt-2">
+        <nav class="navbar navbar-expand-lg navbar-light mt-3">
             <a class="navbar-brand" href="#">Notion</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-1"
                 aria-controls="navbar-1" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,10 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Remote work</a>
+                        <a class="nav-link" href="#">
+                            Remote work
+                            <span class="badge badge-danger">NEW</span>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Customers</a>
