Tried cleaning up spacing in jumbotron

--- a/notion/index.html
+++ b/notion/index.html
@@ -84,11 +84,10 @@
 
         <div class="row jumbotron bg-">
 
-            <div class="col-md-4 offset-md-2">
+            <div class="col-sm-6 col-lg-5 offset-lg-1">
                 <h1 class="jumbotron-header">All-in-one workspace</h1>
             </div>
-            <!-- <div class="col-md-4">left</div> -->
-            <div class="col-md-4 mt-3">
+            <div class="col-sm-6 col-lg-5 mt-3">
                 <p class="text">
                     Write, plan, collaborate, and get organized.
                 </p>
